styles/style.css
body {
    margin: 0px;
    background-color: #1D1D1D;
}

/* App.css */
.main {
    display: flex;
    flex-direction: row;
}

.main-profile1 {
    z-index: 1;
    position: absolute;
    top: 0px;
    right: 0px;
}

.main-profile2 {
    z-index: 1;
    position: absolute;
    top: 160px;
    right: 175px;
}

.main-profile3 {
    z-index: 1;
    position: absolute;
    top: 318px;
    right: 0px;
}

@media screen and (max-width:1375px) {
    .main-profile1 {
        z-index: -1;
    }
    .main-profile2 {
        z-index: -1;
    }
    .main-profile3 {
        z-index: -1;
    }
}

.left_main {
    position: sticky;
    top: 0px;
    width: 9rem;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #181818;
    /* border-right: 1px solid #909096; */
}

.right_main {
    display: flex;
    flex-direction: column;
    background-color: #1D1D1D;
    width: 100vw;
}

.brief-info {
    margin-left: 3rem;
    margin-right: 3rem;
    margin-top: 2rem;
    box-sizing: border-box;
    font-size: 1.2rem;
    font-family: "Open Sans", sans-serif;
    line-height: 1.5;
}

.email-id {
    margin-left: 3rem;
    margin-right: 3rem;
    box-sizing: border-box;
    margin-top: 1rem;
    display: inline-block;
    padding: 0 25px;
    height: 50px;
    font-size: 16px;
    line-height: 50px;
    border-radius: 25px;
    background-color: #181818;
}

.email-id a {
    text-decoration: none;
    color: white;
    font-size: 1.2rem;
    font-family: "Open Sans", sans-serif;
    line-height: 1.5;
}

.email-id a:hover {
    color: #0DFDD7;
}

.email-id img {
    float: left;
    margin: 0 10px 0 -25px;
    height: 50px;
    width: 50px;
    border-radius: 50%;
}

.linked-in {
    margin-left: 3rem;
    margin-right: 3rem;
    box-sizing: border-box;
    margin-top: 1rem;
    display: inline-block;
    padding: 0 25px;
    height: 50px;
    font-size: 20px;
    line-height: 50px;
    border-radius: 25px;
    background-color: #181818;
}

.linked-in a {
    text-decoration: none;
    font-size: 1.2rem;
    font-family: "Open Sans", sans-serif;
    line-height: 1.5;
    color: white;
}

.linked-in a:hover {
    color: #0DFDD7;
}

.linked-in img {
    float: left;
    margin: 0 10px 0 -25px;
    height: 50px;
    width: 50px;
    border-radius: 50%;
}

.course {
    margin-left: 2rem;
    margin-right: 2rem;
    box-sizing: border-box;
    margin-top: 1rem;
    display: inline-block;
    padding: 0 25px;
    height: 50px;
    font-size: 16px;
    line-height: 50px;
    border-radius: 25px;
    background-color: #181818;
    overflow-x: scroll;
}

.course a {
    text-decoration: none;
    color: white;
    font-size: 1.1rem;
    font-family: "Open Sans", sans-serif;
    line-height: 1.5;
}

.course a:hover {
    color: #0DFDD7;
}

.course img {
    float: left;
    margin: 0 10px 0 -25px;
    height: 50px;
    width: 50px;
    border-radius: 50%;
}


/* Navbar.css */


/* Will add flex class to any div so as to make it a flex box */
.flex {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

a {
    text-decoration: none;
}

.top {
    text-align: center;
    width: 100%;
    height: 35%;
}

.middle {
    width: 100%;
    height: 30%;
}

.bottom {
    text-align: center;
    height: 35%;
}

/* Hovering on any of the main sections  */
.main-sections {
    height: inherit;
    border-bottom: 1px solid #282828;
    width: 100%;
}

.main-sections a {
    text-decoration: none;
    font-size: 16px;
    font-family: "Open Sans", sans-serif;
    color: #909096;
}

.main-sections a:hover {
    color: #0DFDD7;
    cursor: pointer;
}

/* Icon styling */
svg {
    padding: 5px;
    color: #909096;
}

.logo-img {
    width: 50px;
}


/* Main.css */

.parent_container {
    display: flex;
    flex-direction: column;
}

.common_property {
    display: flex;
    flex-direction: column;
    color: white;
    height: 100vh;
    overflow: hidden;

}

.coursework_section {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: inherit;
}

.skills_section {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: inherit;
}

@media screen and (max-width :1350px) {
    .skills_section {
        flex-direction: column;
    }
}

.coursework {
    display: flex;
    flex-direction: column;
}

.skills {
    display: flex;
    flex-direction: column;
}

.skills-info {
    box-sizing: border-box;
    margin-left: 3rem;
    margin-right: 3rem;
    margin-top: 2rem;
}

.skills-info p {
    font-size: 1.2rem;
    font-family: "Open Sans", sans-serif;
    line-height: 1.5;
}

.status-container {
    width: 100%;
    border-radius: 2px;
    background-color: #ddd;
    box-sizing: border-box
}

.status-bar {
    text-align: right;
    padding-top: 10px;
    padding-bottom: 10px;
    color: white;
    box-sizing: border-box
}

.cpp {
    width: 95%;
    border-radius: 2px;
    background-color: #f44336;
    box-sizing: border-box
}

.react {
    width: 90%;
    border-radius: 2px;
    background-color: #2196F3;
    box-sizing: border-box
}

.html_css {
    width: 80%;
    border-radius: 2px;
    background-color: #04AA6D;
    box-sizing: border-box
}

.js {
    width: 50%;
    border-radius: 2px;
    background-color: #d2a10b;
    box-sizing: border-box
}


/*     Importing Google fonts    */
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');


/* Applying CSS to sphere */
.tagcloud {
    display: flex;
    font-weight: bold;
    font-family: "Open Sans", sans-serif;
    letter-spacing: 1px;
    font-size: 20px;
}

@media screen and (max-width: 600px) {
    .tagcloud {
        font-size: 10px;
    }
}

.Sphere {
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Map in contacts */
.map {
    margin-top: 25px;
    width: 700px;
    height: 770px;
}
/* ... */

